# aposd-pong

./: README.md  pyproject.toml
pong/: dialogue_master.py  draw.py  main.py  world.py
pong/dialogues/: game_dialogue.py  game_over_dialogue.py  idialogue.py  main_menu_dialogue.py
