[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "aposd-pong"
version = "0.0.1"
dependencies = ["icontract"]

requires-python = ">=3.8"
description = "Play a Pong game."
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]

[project.urls]
Repository = "https://github.com/me/aposd-pong"

[project.scripts]
aposd-pong = "pong.main:main"
